--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,8 +23,10 @@
     </form>
 </header>
 
-<div class="render-container"></div>
+<div class="render-container">
+  <ul class="render-list"></ul>
+</div>
 
-
+<script type="module" src="./src/scripts.js"></script>
 </body>
 </html>
